# contrack

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  README.md  RELEASE.md  release.sh
.cargo/: config.toml
.github/workflows/: release.yml  rust-binaries.yml
src/: commands.rs  config.rs  database.rs  git.rs  main.rs  markdown.rs  utils.rs
