[package]
name = "contrack"
version = "0.0.3"
edition = "2021"
authors = ["Isaac Adams <26559009+isaacadams@users.noreply.github.com>"]
description = "A CLI tool for tracking and documenting code contributions across repositories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/isaacadams/contrack"
readme = "README.md"

[[bin]]
name = "contrack"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
chrono = "0.4"
git2 = "0.18"
colored = "2.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"

